--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-.git
+# ==================== Dependencies ====================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# ==================== Environment Variables ====================
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.*.local
+
+# ==================== Build Output ====================
+dist/
+build/
+out/
+*.js
+*.js.map
+*.d.ts
+
+# ==================== Uploads / Media ====================
+uploads/
+public/uploads/
+storage/
+media/
