feat: implement flagship event version management with CRUD operations and validation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "tsx watch src",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./src/shared/config/typeorm/db.config.ts",
+    "typeorm:generate-migration": "npm run typeorm -- migration:generate  -d ./src/shared/config/typeorm/db.config.ts ./src/shared/config/typeorm/migrations/$npm_config_name"
   },
   "keywords": [],
   "author": "",
