--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typeorm": "tsx ./node_modules/typeorm/cli.js",
-    "typeorm:run-migrations": "tsx ./node_modules/typeorm/cli.js migration:run -d ./src/shared/config/typeorm/db.config.ts",
-    "typeorm:generate-migration": "tsx ./node_modules/typeorm/cli.js migration:generate ./src/shared/config/typeorm/migrations/$npm_config_name -d ./src/shared/config/typeorm/db.config.ts"
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./src/shared/config/typeorm/db.config.ts",
+    "typeorm:generate-migration": "npm run typeorm migration:generate ./src/shared/config/typeorm/migrations/$npm_config_name -- -d ./src/shared/config/typeorm/db.config.ts"
   },
   "keywords": [],
   "author": "",
